<resources>
  <string name="app_name">Popular Movies</string>
  <string name="content_description_movie_poster">Movie Poster</string>
  <string name="unknown">Unknown</string>
  <string name="retry">RETRY</string>

  <string name="menu_title_sort_by">Sort By</string>
  <string name="menu_title_sort_by_popularity">Popularity</string>
  <string name="menu_title_sort_by_top_rated">Top Rated</string>
  <string name="menu_title_sort_by_favourites">Favourites</string>

  <string name="movie_details_movie_backdrop">Movie Backdrop</string>
  <string name="movie_details_movie_poster">Movie Poster</string>

  <string name="loading">Loading…</string>
  <string name="no_internet">No Internet Connection!</string>
  <string name="something_went_wrong">Oops! Something went wrong, Please try again.</string>
  <string name="unknown_error">Oops! We have encountered an unexpected error, Please try again.</string>
  <string name="timeout_error">Oops! Request timeout, Please try again.</string>

  <string name="transition_movie_poster">moviePoster</string>
  <string name="transition_movie_title">movieTitle</string>
  <string name="transition_movie_genres">movieGenres</string>
  <string name="transition_movie_release_date">movieReleaseDate</string>
  <string name="transition_movie_ratebar">movieRateBar</string>
  <string name="transition_movie_rating">movieRating</string>

  <string name="about_title" translatable="false"><![CDATA[
   <font color="#212121">%1$s</font>/10]]>
    </string>
  <string name="content_authority">me.bloodybadboy.popularmovies</string>
  <string name="error_no_intent_data">Movie data not available!</string>

  <string name="info_label_original_title">Original Title:</string>
  <string name="info_label_original_language">Original Language:</string>
  <string name="info_label_tagline">Tagline:</string>
  <string name="info_label_status">Status:</string>
  <string name="info_label_duration">Duration:</string>
  <string name="info_label_budget">Budget:</string>
  <string name="info_label_revenue">Revenue:</string>
  <string name="info_label_spoken_language">Spoken Language(s):</string>
  <string name="info_label_production_countries">Production Countries:</string>
  <string name="info_label_production_companies">Production Companies:</string>
  <string name="info_label_homepage">Homepage:</string>
  <string name="info_label_adult_movie">Adult Movie:</string>

  <string name="no_videos_found">No videos found</string>
  <string name="no_reviews_found">No reviews found</string>

  <string name="nothing_to_show_in_favourites">Nothing to show in favourites!</string>
  <string name="movie_details_tab_info">Info</string>
  <string name="movie_details_tab_casts">Casts</string>
  <string name="movie_details_tab_videos">Videos</string>
  <string name="movie_details_tab_reviews">Reviews</string>
  <string name="no_casts_found">No casts found</string>
  <string name="content_description_nothing_found">Nothing Found</string>
  <string name="movie_info_currency_format">$%,.2f</string>
  <string name="movie_info_duration_format">%dh %02dm</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
</resources>
