<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:icon="@drawable/ic_sort_white"
      android:title="@string/menu_title_sort_by"
      app:iconTint="@android:color/black"
      app:showAsAction="ifRoom">
    <menu>
      <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_popularity"
            android:checked="true"
            android:title="@string/menu_title_sort_by_popularity"/>
        <item
            android:id="@+id/sort_by_rating"
            android:title="@string/menu_title_sort_by_top_rated"/>
        <item
            android:id="@+id/sort_by_favourites"
            android:title="@string/menu_title_sort_by_favourites"/>
      </group>
    </menu>
  </item>
</menu>