<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_scrollFlags="enterAlways"
    android:layout_height="wrap_content"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp"
        />
    <TextView
        android:id="@+id/tv_info_overview"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut pretium risus. Suspendisse interdum et turpis ac auctor. Duis id lorem in risus placerat malesuada nec ac enim. Vestibulum sed."
        />
    <TextView
        android:id="@+id/tv_info_original_title_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_original_title"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_tagline"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_original_title"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_original_title_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_original_title_label"
        tools:text="Lorem ipsum"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_original_language_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_original_language"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_original_title"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_original_language"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_original_language_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_original_language_label"
        tools:text="English"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_tagline_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_tagline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_adult"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_tagline"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_tagline_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_tagline_label"
        tools:text="Lorem ipsum dolor sit amet"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_status_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_status"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_overview"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_status"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_info_status_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_status_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_status_label"
        tools:text="Released"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_adult"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_info_adult_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_adult_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_adult_label"
        tools:text="YES"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_adult_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_adult_movie"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_status"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_duration_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_duration"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_original_language"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_duration"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_info_duration_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_duration_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_duration_label"
        tools:text="0h 0m"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_budget_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_budget"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_spoken_lang"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_budget"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_info_budget_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_budget_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_budget_label"
        tools:text="USD 10,00,000"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_revenue_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_revenue"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_budget"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_revenue"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_info_revenue_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_revenue_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_revenue_label"
        tools:text="USD 15,00,000"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_spoken_lang_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_spoken_language"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_duration"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_spoken_lang"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_spoken_lang_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_spoken_lang_label"
        tools:text="English"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_prod_countries_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_production_countries"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_revenue"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_prod_countries"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_prod_countries_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_prod_countries_label"
        tools:text="India"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_prod_companies_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:text="@string/info_label_production_companies"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_prod_countries"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_prod_companies"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_prod_companies_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_prod_companies_label"
        tools:text="XCompany"
        style="@style/MovieInfoText"
        />
    <TextView
        android:id="@+id/tv_info_website_label"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/info_label_homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_prod_companies"
        app:layout_constraintVertical_bias="0.0"
        style="@style/MovieInfoLabelText"
        />
    <TextView
        android:id="@+id/tv_info_website"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:autoLink="web"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_info_website_label"
        app:layout_constraintTop_toTopOf="@+id/tv_info_website_label"
        tools:text="www.example.com"
        style="@style/MovieInfoText"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>