<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <me.bloodybadboy.popularmovies.ui.widget.BottomArcImageView
        android:id="@+id/iv_movie_details_backdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_details_movie_backdrop"
        android:scaleType="fitXY"
        app:arcElevation="8dp"
        app:arcHeight="24dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/backdrop"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/movie_details_poster_card_corner_radius"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_details_backdrop"
        app:layout_constraintDimensionRatio="w,2:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_details_backdrop"
        >
      <ImageView
          android:id="@+id/iv_movie_details_poster"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/poster"
          android:contentDescription="@string/movie_details_movie_poster"
          android:cropToPadding="false"
          android:scaleType="fitXY"
          android:transitionName="@string/transition_movie_poster"
          />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_movie_details_title"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:transitionName="@string/transition_movie_title"
        app:layout_constraintEnd_toStartOf="@+id/fab_movie_details_add_to_favourites"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_details_backdrop"
        tools:text="Inside Out"
        />
    <TextView
        android:id="@+id/tv_movie_details_genres"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:transitionName="@string/transition_movie_genres"
        app:layout_constraintEnd_toStartOf="@+id/fab_movie_details_add_to_favourites"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_details_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_title"
        tools:text="Genres"
        />
    <RatingBar
        android:id="@+id/rb_movie_details_rate_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:isIndicator="true"
        android:theme="@style/RatingBar.Theme.Amber"
        android:transitionName="@string/transition_movie_ratebar"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_details_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_release_date"
        tools:rating="4"
        style="@style/Widget.AppCompat.RatingBar.Small"
        />
    <TextView
        android:id="@+id/tv_movie_details_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space_small"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="13sp"
        android:transitionName="@string/transition_movie_rating"
        app:layout_constraintBottom_toBottomOf="@+id/rb_movie_details_rate_bar"
        app:layout_constraintStart_toEndOf="@+id/rb_movie_details_rate_bar"
        app:layout_constraintTop_toTopOf="@+id/rb_movie_details_rate_bar"
        tools:text="8.0"
        />
    <TextView
        android:id="@+id/tv_movie_details_release_date"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        android:transitionName="@string/transition_movie_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_details_genres"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_genres"
        tools:text="21/ 03 /2018"
        />
    <TextView
        android:id="@+id/tv_movie_details_plot_explanation"
        android:layout_width="@dimen/default_space_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_space"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="TextView"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_movie_details_add_to_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/selectableItemBackground"
        app:backgroundTint="@android:color/white"
        app:elevation="8dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_details_genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_details_title"
        app:srcCompat="@drawable/ic_like_inactive"
        />
    <LinearLayout
        android:id="@+id/ll_movie_details_tabs_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_plot_explanation"
        >
      <android.support.design.widget.TabLayout
          android:id="@+id/tl_movie_details_tabs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginStart="16dp"
          app:tabSelectedTextColor="@color/colorPrimary"
          >

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cast &amp; Crew"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Videos"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reviews"
            />
      </android.support.design.widget.TabLayout>
      <android.support.v4.view.ViewPager
          android:id="@+id/vp_movie_details_pages"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
      </android.support.v4.view.ViewPager>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_movie_details_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_plot_explanation"
        style="?android:attr/progressBarStyle"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_details_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_details_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_details_rating"
        app:srcCompat="@drawable/ic_imdb"
        />
  </android.support.constraint.ConstraintLayout>

</FrameLayout>